--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body><div class="container">
 
     <div class="gh">
-        <img class="ku" src="img1.png" alt="" srcset="">
+        <div class="ku" >
+        <img src="img1.png" alt="" srcset=""></div>
         <div class="not"></div>
 
         <div class="name">
