--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
         <h4>host:</h4>
   <h4> a1 pharmacy and stores </h4>
-  <small>free gift avaliable for first ten early birds</small></div>
+  <small><B>PHARMACY</B> UNITED IN ACTION FOR A HEALTHIER WORLD</small></div>
   
   
 </div>
@@ -37,7 +37,7 @@
             <img  class="imm" src="img2.png" alt="" srcset="">
     <ul>
         <li>counseling</li>
-        <li>blood pressre check</li>
+        <li>blood pressure check</li>
         <li>50% discount on blood sugar test</li>
         <li>bmi check</li>
         <li>weight check</li>
@@ -45,6 +45,7 @@
     </ul>
     <div class="lower">
         <p>#wpd2022</p>
+        <p>TIME: 11AM</p>
 </div>
 
 </div>
